# jradhima.github.io

./: .gitignore  README.md  build.py  config.yaml  hugo.toml  index.html  pyproject.toml
.github/workflows/: blogipy.yaml  pydea.yaml
apps/: compare-rent-buy.html  index.html
blogipy/: build.py  cli.py
content/: about.md
content/posts/: being-pythonic.md  decorators-explained.md  labels-not-boxes-v2.md  labels-not-boxes.md  my-first-post.md  my-second-post.md
output/: about.html  being-pythonic.html  decorators-explained.html  index.html  labels-not-boxes-v2.html  labels-not-boxes.html  style.css
pages/: about.md
posts/: being-pythonic.md  decorators-explained.md  labels-not-boxes-v2.md  labels-not-boxes.md  vibe-coding-a-blog-generator.md
public/: index.html  index.xml  sitemap.xml
public/about/: index.html
public/ananke/css/: main.css.map
public/categories/: index.html  index.xml
public/img/: about.txt
public/page/1/: index.html
public/posts/: index.html  index.xml
public/posts/my-first-post/: index.html
public/posts/my-second-post/: index.html
public/tags/: index.html  index.xml
public/tags/programming/: index.html  index.xml
public/tags/python/: index.html  index.xml
pydea/: build.py  cli.py  new.py
templates/: layout.html  style.css
