[project]
name = "pydea"
version = "0.1.0"
description = "Minimal markdown blog generator"
requires-python = ">=3.11"
dependencies = [
    "mistune>=3.2.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
]

[project.scripts]
pydea = "pydea.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pydea*"]

[tool.uv]
package = true
dev-dependencies = []
